[gd_scene load_steps=12 format=3 uid="uid://cuph2xwpxikf3"]

[ext_resource type="Script" path="res://2048/scripts/Main.gd" id="1_5thdn"]
[ext_resource type="Texture2D" uid="uid://bxbnx83el7oi1" path="res://2048/textures/white.png" id="2_42bvx"]
[ext_resource type="Texture2D" uid="uid://gqhqim7ke0ol" path="res://2048/textures/game_area.png" id="3_aranc"]
[ext_resource type="Script" path="res://2048/scripts/BlocksArea.gd" id="4_6lbgb"]
[ext_resource type="Texture2D" uid="uid://bktw0vvoyc7uf" path="res://2048/textures/scorelabel_0.png" id="5_etnr4"]
[ext_resource type="Script" path="res://2048/scripts/ScoreLabel.gd" id="5_rek2j"]
[ext_resource type="Texture2D" uid="uid://cwoly7xuewjwx" path="res://2048/textures/scorelabel_1.png" id="6_f1p03"]
[ext_resource type="PackedScene" uid="uid://baek1dy1vffgu" path="res://2048/scenes/ScoreDisplay.tscn" id="8_jljkw"]
[ext_resource type="Texture2D" uid="uid://70uyacurpmdi" path="res://2048/textures/high_score_text.png" id="9_nnnm4"]
[ext_resource type="PackedScene" uid="uid://dqyg8q6fjelnx" path="res://2048/scenes/HeatBar.tscn" id="10_ga7pf"]
[ext_resource type="PackedScene" uid="uid://bk5ru1uwi230q" path="res://2048/scenes/Blocks.tscn" id="11_phg7y"]

[node name="Screen" type="Node2D"]
z_index = 100
position = Vector2(180, 320)
script = ExtResource("1_5thdn")

[node name="Background" type="Sprite2D" parent="."]
z_index = 200
z_as_relative = false
scale = Vector2(5.625, 10)
texture = ExtResource("2_42bvx")

[node name="BlocksArea" type="Sprite2D" parent="."]
z_index = 300
z_as_relative = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_aranc")
script = ExtResource("4_6lbgb")

[node name="ScoreLabel" type="Node2D" parent="."]
z_index = 400
z_as_relative = false
position = Vector2(0, -242)
scale = Vector2(0.25, 0.25)
script = ExtResource("5_rek2j")

[node name="RestartButton" type="TextureButton" parent="ScoreLabel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = -240.0
offset_right = 560.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
keep_pressed_outside = true
texture_normal = ExtResource("5_etnr4")
texture_pressed = ExtResource("6_f1p03")

[node name="ScoreDisplay" parent="ScoreLabel" instance=ExtResource("8_jljkw")]

[node name="HighScore" type="Sprite2D" parent="."]
z_index = 300
position = Vector2(0, 274)
scale = Vector2(0.15, 0.15)
texture = ExtResource("9_nnnm4")

[node name="ScoreDisplay" parent="HighScore" instance=ExtResource("8_jljkw")]
position = Vector2(0, 192)
scale = Vector2(0.75, 0.75)

[node name="HeatBar" parent="." instance=ExtResource("10_ga7pf")]
z_index = 500
position = Vector2(-40, 215)
scale = Vector2(0.15, 0.15)

[node name="TipBlock" parent="HeatBar" instance=ExtResource("11_phg7y")]
z_index = 500
position = Vector2(1113.33, 0)
scale = Vector2(6.66667e-05, 6.66667e-05)
